--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/448095230c.js" crossorigin="anonymous"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AVzPUFAqQR1BvHrU1n1vaOv5uU1Yv8HYNaMyRkKgbXD_Kbde8QkcDpc0ie5lR6zKh4hbpAMSgtKb1FD4"></script>
 </head>
 <body>
   <app-root></app-root>
