--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--<script src="https://kit.fontawesome.com/bb01f89d0a.js" crossorigin="anonymous"></script>-->
   <script src="https://kit.fontawesome.com/448095230c.js" crossorigin="anonymous"></script>
-  <script src="https://www.paypal.com/sdk/js?client-id=Acnij8w2pEdOLayl_GHaAnBR0IZ-QGGb3PJaca0dqehPStTjrdqTuHqlbtHnBtEhJp5IReJGvOY0yCk_"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=Acnij8w2pEdOLayl_GHaAnBR0IZ-QGGb3PJaca0dqehPStTjrdqTuHqlbtHnBtEhJp5IReJGvOY0yCk_&disable-funding=credit,card"></script>
 </head>
 <body>
   <app-root></app-root>
